Terceira versão - Envio de mensagem e atualização de status implementados

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="topo"> <img class="logo"src="./images/logo 1.png">        <img class="people"src="./images/Vector.png">   </div>
                 <div class="conteudo">
                 </div>
-                <div class="bottom"> <input type="text" placeholder="Escreva aqui..."> <ion-icon class ="logo-icon"name="paper-plane-outline" onclick=""></ion-icon></div>
+                <div class="bottom"> <input class ="enviar"type="text" placeholder="Escreva aqui..."> <ion-icon class ="logo-icon"name="paper-plane-outline" onclick="enviarMensagem()"></ion-icon></div>
                 <div class="menu-envio"> 
                     <div class="titulo"><h1>Escolha um contato para enviar mensagem:</h1></div>
                     <ul class="participantes">
